--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,4 +74,16 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  --ion-font-family: 'Rubik-Regular';
+}
+
+@font-face {
+  font-family: 'Rubik-Regular';
+  src: url('../assets/font/Rubik-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Rubik-Bold';
+  src: url('../assets/font/Rubik-Bold.ttf');
 }
