menu page and side menu

--- a/src/app/page/landing-page/landing-page.page.html
+++ b/src/app/page/landing-page/landing-page.page.html
@@ -7,10 +7,12 @@
             <h2>Welcome to <br><span style="font-family:'Rubik-Bold">Prime Messages</span></h2>
         </div>
     </div>
-    <div class="d-flex text-center text-div">
-        <p>Click on the <span style="color: #04276C">Start Subscribing</span> button to Register and start subscribing your favorite channels and get exclusive offers and news</p>
-    </div>
-    <div class="text-center">
-        <button type="button" [routerLink]="['/numberentry']" class="btn start-btn">Start Subscribing</button>
+    <div class="bg-color">
+         <div class="d-flex text-center text-div">
+            <p>Click on the <span style="color: #258DED">Start Subscribing</span> button to Register and start subscribing your favorite channels and get exclusive offers and news</p>
+        </div>
+        <div class="text-center">
+            <button type="button" routerLink="/numberentry" class="btn start-btn">Start Subscribing</button>
+        </div>
     </div>
 </ion-content>
