--- a/src/app/page/landing-page/landing-page.page.scss
+++ b/src/app/page/landing-page/landing-page.page.scss
@@ -14,19 +14,24 @@
 	position: absolute;
     text-align: center;
     top: 70%;
-    color: white;
+    color: #333;
     letter-spacing: 2px;
 }
 
 .text-div {
-	margin: 15% 15% 0% 15%;
     font-size: 12px;
     color: #04804C;
 }
 
 .start-btn {
-	color: white;
-	background: #3E6292;
+	color: #333;
+	background: #258DED;
 	margin-top: 15%;
     width: 75%;
+}
+
+.bg-color {
+    background: #333;
+    padding: 15% 15% 0% 15%;
+    height: 45%;
 }
