--- a/src/app/page/profile-page/profile-page.page.scss
+++ b/src/app/page/profile-page/profile-page.page.scss
@@ -1,6 +1,6 @@
 .bg-img {
-	background: #333;
 	position: relative;
+	background: #333;
 	height: 100%;
 	width: 100%;
 }
@@ -17,12 +17,17 @@
 
 .bg-overlay2 {
 	top: 20%;
-	position: absolute;
-	width: 70%;
-	padding-left: 3%;
-	color: #333;
-	text-align: justify;
-	font-size: 15px;
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.profileimg {
+	width: 200px;
+	height: 200px;
+	background: rgba(37, 141, 237, 0.5);
+    border-radius: 100%;
 }
 
 .bg-overlay3 {
@@ -32,7 +37,7 @@
 	text-align: center;
 }
 
-.number-input {
+.name-input {
 	border: 0.5px solid rgba(0, 0, 0, 0.5);
 	width: 60%;
 	border-radius: 5px;
