--- a/src/app/page/menu-page/menu-page.page.html
+++ b/src/app/page/menu-page/menu-page.page.html
@@ -6,8 +6,8 @@
 </ion-header>
 
 <ion-content>
-	<ion-segment scrollable="true">
-		<ion-segment-button checked>
+	<ion-segment mode="md">
+		<ion-segment-button>
 			<ion-label>
 				Home
 			</ion-label>
