--- a/src/app/page/menu-page/menu-page.page.html
+++ b/src/app/page/menu-page/menu-page.page.html
@@ -5,17 +5,32 @@
 	<h1 class="title">Header</h1>
 </ion-header>
 
-<ion-content>
-	<ion-segment mode="md">
-		<ion-segment-button>
+<super-tabs>
+
+	<super-tabs-toolbar class="ion-no-padding container" slot="top" scrollable>
+		<super-tab-button class="col-6">
 			<ion-label>
 				Home
 			</ion-label>
-		</ion-segment-button>
-		<ion-segment-button>
+		</super-tab-button>
+		<super-tab-button class="col-6">
 			<ion-label>
 				Deals
 			</ion-label>
-		</ion-segment-button>
-	</ion-segment>
-</ion-content>
+		</super-tab-button>
+	</super-tabs-toolbar>
+
+	<super-tabs-container>
+		<super-tab>
+			<ion-content>
+				Page A
+			</ion-content>
+		</super-tab>
+		<super-tab>
+			<ion-content>
+				Page B
+			</ion-content>
+		</super-tab>
+	</super-tabs-container>
+
+</super-tabs>
