--- a/src/app/component/sidemenu/sidemenu.component.scss
+++ b/src/app/component/sidemenu/sidemenu.component.scss
@@ -41,3 +41,34 @@
     font-size: 20px;
     font-weight: bolder;
 }
+
+.sidemenuimg {
+	width: 15%;
+	margin-right: 10%;
+}
+
+ion-content {
+	--background: #333;
+	--color: white;
+}
+
+ion-list {
+	background: #333;
+}
+
+ion-item {
+	--background: #333;
+	--color: white;
+	--inner-padding-start: 10px;
+	--padding-start: 0px;
+	--border-style: none;
+	border-bottom: 0.5px solid white;
+}
+
+
+
+
+
+
+
+
