--- a/src/app/page/channel-page/channel-page.page.html
+++ b/src/app/page/channel-page/channel-page.page.html
@@ -4,6 +4,7 @@
 			<button class="header-back-button" type="button"><i class="fas fa-chevron-left"></i></button>
 		</div>
 		<div class="header-sub-div2">
+			<img class="header-title-image" src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
 			<p class="header-title">Test Channel</p>
 		</div>
 		<div class="header-sub-div3">
