--- a/src/app/page/channel-page/channel-page.page.scss
+++ b/src/app/page/channel-page/channel-page.page.scss
@@ -1,34 +1,50 @@
 .header {
 	background: #258DED;
-	color: white;
-	height: 50px
+	height: 60px
 }
 
 .header-div {
 	display: flex;
     width: 100%;
+	height: 100%
 }
 
 .header-sub-div1 {
-	width: 15%
+	width: 15%;
+	display: flex;
 }
 
 .header-back-button {
-
+	background: rgba(0, 0, 0, 0.0);
+    margin: auto;
+    font-size: 22px;
 }
 
 .header-sub-div2 {
-	width: 70%
+	width: 70%;
+	display: flex;
+}
+
+.header-title-image {
+	width: 40px;
+    height: 40px;
+    margin: auto 2%;
+    border-radius: 100%;
 }
 
 .header-title {
-	
+	font-size: 20px;
+    font-weight: bolder;
+    margin: auto auto auto 2%;
 }
 
 .header-sub-div3 {
-	width: 15%
+	width: 15%;
+	display: flex;
 }
 
 .header-info-button {
-
+    margin: auto;
+    background: rgba(0, 0, 0, 0);
+    font-size: 20px;
 }
