--- a/src/app/page/channelinfo-page/channelinfo-page.page.html
+++ b/src/app/page/channelinfo-page/channelinfo-page.page.html
@@ -1,9 +1,51 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>channelinfo-page</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+	<div class="channel-info-body-div">
+		<div class="channel-info-image-div">
+			<div class="channel-info-bgimage-div">
+				<img class="channel-info-bgimage" src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
+			</div>
+			<div class="overylay-channel-info">
+				<div class="channel-info-back-button-div">
+					<button class="channel-info-back-button" routerLink="/channel" type="button"><i class="fas fa-chevron-left"></i></button>
+				</div>
+				<div class="channel-info-roundimage-div">
+					<img class="channel-info-image" src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
+				</div>
+			</div>
+		</div>
+		<div class="channel-info-div">
+			<div class="channel-info-name-div">
+				<div class="channel-name-div">
+					<p class="channel-name">Name</p>
+				</div>
+				<div class="channel-nametext-div">
+					<p class="channel-nametext">Test Channel</p>
+				</div>
+			</div>
+			<div class="channel-info-type-div">
+				<div class="channel-type-div">
+					<p class="channel-type">Type</p>
+				</div>
+				<div class="channel-typetext-div">
+					<p class="channel-typetext">Entertainment</p>
+				</div>
+			</div>
+			<div class="channel-info-location-div">
+				<div class="channel-location-div">
+					<p class="channel-location">Location</p>
+				</div>
+				<div class="channel-locationtext-div">
+					<p class="channel-locationtext">Kaniyakumari</p>
+				</div>
+			</div>
+			<div class="channel-info-description-div">
+				<div class="channel-description-div">
+					<p class="channel-description">Description</p>
+				</div>
+				<div class="channel-descriptiontext-div">
+					<textarea class="channel-descriptiontext"></textarea>
+				</div>
+			</div>
+		</div>
+	</div>
 </ion-content>
