--- a/src/app/page/menu-page/menu-page.page.html
+++ b/src/app/page/menu-page/menu-page.page.html
@@ -54,9 +54,39 @@
 					</div>
 				</div>
 
+				<div class="message-main-div">
+					<div class="message-header-div">
+						<div class="message-channel-text-div">
+							<div class="message-channel-text">T</div>
+						</div>
+						<div class="message-channel-name-div">
+							<p class="message-channel-name">Test Channel</p>
+						</div>
+						<div class="message-channel-goto-div">
+							<button routerLink="/channel" class="message-channel-goto" type="button"><i class="fas fa-chevron-right"></i></button>
+						</div>
+					</div>
+					<div class="message-body-div">
+						<div class="message-body-image-div">
+							<img class="message-body-image" src="https://images.unsplash.com/photo-1499084732479-de2c02d45fcc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
+						</div>
+						<div class="message-body-text-div">
+							<p class="message-body-text">UFvibiubgiu iug uguyf uyviu f dtyf 8gou iubvhiv tucftuy fiyg ouhyf fgoug iu9g7 iug ougug iuvjkbjkb iogh ggou8 ou8h8gty fgoughoiho8ghy 8 o8 u8gh u8ghu8gugiu</p>
+						</div>
+					</div>
+					<div class="message-footer-div">
+						<div class="message-channel-location-div">
+							<p class="message-channel-location"><i class="fas fa-map-marker-alt"></i> kanyakuamri</p>
+						</div>
+						<div class="message-channel-date-div">
+							<p class="message-channel-date">dd/mm/yyyy hh:mm</p>
+						</div>
+					</div>
+				</div>
+
 				<div class="homepage-div">
 					<div class="homepage-text-div">
-						<p class="homepage-text">You have not subscribed to any channels, Please subscribe to get latest updates.</p>
+						<p class="homepage-text">You have 2 subscribed channels, Subscribe more channels to get latest updates.</p>
 					</div>
 					<div class="homepage-button-div">
 						<button class="homepage-button" type="button">Click Here</button>
@@ -73,6 +103,33 @@
 					<div class="channel-sub-div1">
 						<div class="channel-image-div">
 							<img class="channel-image" src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
+						</div>
+					</div>
+					<div class="channel-sub-div2">
+						<div class="channel-head-div">
+							<p class="channel-head">Test Channel</p>
+							<div class="channel-nav-button-div">
+								<button routerLink="/channel" class="channel-nav-button" type="button"><i class="fas fa-chevron-right"></i></button>
+							</div>
+						</div>
+						<div class="channel-body-div">
+							<p class="channel-body">Type: Entertainment</p>
+						</div>
+						<div class="channel-footer-div">
+							<div class="channel-footer-subdiv1">
+								<p class="channel-footer1"><i class="fas fa-users"></i> 5</p>
+							</div>
+							<div class="channel-footer-subdiv2">
+								<p class="channel-footer2"><i class="fas fa-map-marker-alt"></i> kanyakuamri</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="channel-main-div">
+					<div class="channel-sub-div1">
+						<div class="channel-text-div">
+							<div class="channel-text">T</div>
 						</div>
 					</div>
 					<div class="channel-sub-div2">
