--- a/src/app/page/channel-page/channel-page.page.html
+++ b/src/app/page/channel-page/channel-page.page.html
@@ -1,18 +1,48 @@
 <ion-header class="header">
 	<div class="header-div">
 		<div class="header-sub-div1">
-			<button class="header-back-button" type="button"><i class="fas fa-chevron-left"></i></button>
+			<button class="header-back-button" routerLink="/menu" type="button"><i class="fas fa-chevron-left"></i></button>
 		</div>
 		<div class="header-sub-div2">
 			<img class="header-title-image" src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
+			<!-- <div class="header-title-text">
+				<p class="header-title-txt">T</p>
+			</div> -->
 			<p class="header-title">Test Channel</p>
 		</div>
 		<div class="header-sub-div3">
-			<button class="header-info-button" type="button"><i class="fas fa-info"></i></button>
+			<button class="header-info-button" routerLink="/channelinfo" type="button"><i class="fas fa-info"></i></button>
 		</div>
 	</div>
 </ion-header>
 
 <ion-content>
+	<div class="message-main-div">
+		<div class="message-header-div">
+			<div class="message-image-div">
+				<img class="message-image" src="https://images.unsplash.com/photo-1499084732479-de2c02d45fcc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
+			</div>
+			<div class="message-text-div">
+				<p class="message-text">njviu gug iygg iygiu giubh j kbijg uyfy fiyou goughio8 gtiyf yifv iugviu giyf uydftuvhviug iyfgy ufviyg iug iufguyf tuhjvhvbiy tdf tuftf uyfiy giug iyg</p>
+			</div>
+		</div>
+		<div class="message-footer-div">
+			<div class="message-datetime-div">
+				<p class="message-datetime">dd/mm/yyyy hh:mm</p>
+			</div>
+		</div>
+	</div>
 
+	<div class="message-main-div">
+		<div class="message-header-div">
+			<div class="message-text-div">
+				<p class="message-text">njviu gug iygg iygiu giubh j kbijg uyfy fiyou goughio8 gtiyf yifv iugviu giyf uydftuvhviug iyfgy ufviyg iug iufguyf tuhjvhvbiy tdf tuftf uyfiy giug iyg</p>
+			</div>
+		</div>
+		<div class="message-footer-div">
+			<div class="message-datetime-div">
+				<p class="message-datetime">dd/mm/yyyy hh:mm</p>
+			</div>
+		</div>
+	</div>
 </ion-content>
