--- a/src/app/page/channel-page/channel-page.page.scss
+++ b/src/app/page/channel-page/channel-page.page.scss
@@ -28,8 +28,24 @@
 .header-title-image {
 	width: 40px;
     height: 40px;
-    margin: auto 2%;
+    margin: auto 0px;
     border-radius: 100%;
+}
+
+.header-title-text {
+	width: 40px;
+    height: 40px;
+    background: #333;
+    color: #fff;
+    border-radius: 100%;
+    margin: auto 0%;
+    display: flex;
+}
+
+.header-title-txt {
+	margin: auto;
+    font-size: 20px;
+    font-weight: bolder;
 }
 
 .header-title {
@@ -48,3 +64,87 @@
     background: rgba(0, 0, 0, 0);
     font-size: 20px;
 }
+
+.message-main-div {
+	width: 90%;
+    margin: 2% auto;
+    // border-radius: 5px;
+    box-shadow: 0px 0px 4px;
+}
+
+.message-header-div {
+	width: 95%;
+    margin: auto;
+    padding-top: 2%;
+}
+
+.message-image-div {
+	width: 100%;
+    height: 100%;
+}
+
+.message-image {
+	width: 100%;
+    height: 100%;
+}
+
+.message-text-div {
+	margin: 0px;
+    text-align: justify;
+    padding-top: 5px;
+}
+
+.message-text {
+	margin: 0px
+}
+
+.message-footer-div {
+	width: 100%
+}
+
+.message-datetime-div {
+	width: 98%;
+    text-align: end;
+}
+
+.message-datetime {
+	margin: 0px;
+    color: #777;
+    font-size: 12px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
