--- a/src/app/page/menu-page/menu-page.page.scss
+++ b/src/app/page/menu-page/menu-page.page.scss
@@ -37,7 +37,7 @@
 
 .message-channel-image-div {
 	width: 15%;
-    margin: auto;
+    margin: auto auto auto 0px;
     text-align: center;
 }
 
@@ -47,13 +47,32 @@
     border-radius: 100%;
 }
 
+.message-channel-text-div {
+    width: 15%;
+    margin: auto;
+    display: flex;
+}
+
+.message-channel-text {
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    border-radius: 100%;
+    margin: 0;
+    background: #333;
+    font-weight: bolder;
+    font-size: 26px;
+    padding-top: 10%;
+    color: #fff;
+}
+
 .message-channel-name-div {
 	width: 70%;
     display: flex;
 }
 
 .message-channel-name{
-	margin: auto auto auto 5%;
+	margin: auto auto auto 0px;
     font-size: 18px;
     font-weight: bolder;
 }
@@ -69,7 +88,7 @@
 }
 
 .message-body-div {
-	padding: 5px;
+	padding: 5px 5%;
 }
 
 .message-body-image-div {
@@ -121,7 +140,7 @@
 
 .homepage-div {
 	width: 95%;
-    margin: auto;
+    margin: 2% auto;
     background: #333;
     border-radius: 5px;
 }
@@ -199,6 +218,24 @@
 	border-radius: 5px 0px 0px 5px;
 }
 
+.channel-text-div {
+    width: 100%;
+    height: 120px;
+}
+
+.channel-text {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px 0px 0px 5px;
+    background: #333;
+    display: flex;
+    color: #fff;
+    font-size: 40px;
+    justify-content: space-around;
+    padding-top: 25%;
+    font-weight: bolder;
+}
+
 .channel-nav-button {
 	margin: auto 0px auto auto;
     background: white;
@@ -271,7 +308,7 @@
     font-size: 16px;
     font-weight: bolder;
     letter-spacing: 0.8px;
-    color: #0062cc;
+    color: #777;
 }
 
 
