--- a/src/app/page/channelinfo-page/channelinfo-page.page.html
+++ b/src/app/page/channelinfo-page/channelinfo-page.page.html
@@ -43,7 +43,7 @@
 					<p class="channel-description">Description</p>
 				</div>
 				<div class="channel-descriptiontext-div">
-					<textarea class="channel-descriptiontext"></textarea>
+					<div class="channel-descriptiontext">kjbjbjk bjkbjk bjk bjkb b jkb b b jhigfiubg iugiy guyfuy jfv uykb jk</div>
 				</div>
 			</div>
 		</div>
