manage chanel and info

--- a/src/app/page/manage-channel-page/manage-channel-page.page.html
+++ b/src/app/page/manage-channel-page/manage-channel-page.page.html
@@ -4,10 +4,7 @@
 			<button class="header-back-button" routerLink="/menu" type="button"><i class="fas fa-chevron-left"></i></button>
 		</div>
 		<div class="header-title-div">
-			<p class="header-title">Search Channels</p>
-		</div>
-		<div class="header-search-bar-div">
-			<button class="header-search-bar" type="button"><i class="fas fa-search"></i></button>
+			<p class="header-title">Manage your Channels</p>
 		</div>
 	</div>
 </ion-header>
@@ -27,7 +24,7 @@
 			<div class="channel-head-div">
 				<p class="channel-head">Test Channel</p>
 				<div class="channel-nav-button-div">
-					<button routerLink="/channel" class="channel-nav-button" type="button"><i class="fas fa-chevron-right"></i></button>
+					<button routerLink="/managechannelsend" class="channel-nav-button" type="button"><i class="fas fa-chevron-right"></i></button>
 				</div>
 			</div>
 			<div class="channel-body-div">
