--- a/src/app/page/manage-channel-send-page/manage-channel-send-page.page.html
+++ b/src/app/page/manage-channel-send-page/manage-channel-send-page.page.html
@@ -1,7 +1,7 @@
 <ion-header class="header">
 	<div class="header-div">
 		<div class="header-sub-div1">
-			<button class="header-back-button" routerLink="/menu" type="button"><i class="fas fa-chevron-left"></i></button>
+			<button class="header-back-button" routerLink="/managechannel" type="button"><i class="fas fa-chevron-left"></i></button>
 		</div>
 		<div class="header-sub-div2">
 			<img class="header-title-image" src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
@@ -11,7 +11,7 @@
 			<p class="header-title">Test Channel</p>
 		</div>
 		<div class="header-sub-div3">
-			<button class="header-info-button" routerLink="/channelinfo" type="button"><i class="fas fa-info"></i></button>
+			<button class="header-info-button" routerLink="/managechannelinfo" type="button"><i class="fas fa-info"></i></button>
 		</div>
 	</div>
 </ion-header>
@@ -30,6 +30,17 @@
 		<div class="message-footer-div">
 			<div class="message-datetime-div">
 				<p class="message-datetime">dd/mm/yyyy hh:mm</p>
+			</div>
+		</div>
+	</div>
+
+	<div>
+		<div>
+			<div>
+				<textarea></textarea>
+			</div>
+			<div>
+				
 			</div>
 		</div>
 	</div>
