--- a/src/app/page/manage-channel-info-page/manage-channel-info-page.page.html
+++ b/src/app/page/manage-channel-info-page/manage-channel-info-page.page.html
@@ -9,7 +9,7 @@
 			</div>
 			<div class="overylay-channel-info">
 				<div class="channel-info-back-button-div">
-					<button class="channel-info-back-button" routerLink="/channel" type="button"><i class="fas fa-chevron-left"></i></button>
+					<button class="channel-info-back-button" routerLink="/managechannelsend" type="button"><i class="fas fa-chevron-left"></i></button>
 				</div>
 				<!-- <div class="channel-info-roundimage-div">
 					<img class="channel-info-image" src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
@@ -28,6 +28,14 @@
 				</div>
 				<div class="channel-nametext-div">
 					<p class="channel-nametext">Test Channel</p>
+				</div>
+			</div>
+			<div class="channel-info-id-div">
+				<div class="channel-id-div">
+					<p class="channel-id">Id</p>
+				</div>
+				<div class="channel-idtext-div">
+					<p class="channel-idtext">PM-1236547890</p>
 				</div>
 			</div>
 			<div class="channel-info-type-div">
