--- a/src/app/page/manage-channel-info-page/manage-channel-info-page.page.scss
+++ b/src/app/page/manage-channel-info-page/manage-channel-info-page.page.scss
@@ -13,7 +13,7 @@
 }
 
 .channel-info-bgimage-div {
-	width: 100%;
+    width: 100%;
     height: 100%;
     position: absolute;
 }
@@ -33,7 +33,7 @@
 }
 
 .overylay-channel-info {
-	position: absolute;
+    position: absolute;
     width: 100%;
     display: flex;
     height: 100%;
@@ -56,7 +56,7 @@
 }
 
 .channel-info-roundimage-div {
-	position: absolute;
+    position: absolute;
     height: 100%;
     display: flex;
     width: 100%;
@@ -89,19 +89,19 @@
 }
 
 .channel-info-image {
-	width: 150px;
+    width: 150px;
     height: 150px;
     margin: auto;
     border-radius: 100%;
 }
 
 .channel-info-div {
-	width: 90%;
-	margin: auto;
+    width: 90%;
+    margin: auto;
 }
 
 .channel-info-name-div {
-	display: flex;
+    display: flex;
     width: 100%;
     background: white;
     border-radius: 5px;
@@ -109,7 +109,7 @@
 }
 
 .channel-name-div {
-	width: 50%;
+    width: 50%;
     display: flex;
     margin: auto auto auto 5%;
 }
@@ -128,14 +128,48 @@
 }
 
 .channel-nametext {
-	margin: 0px;
+    margin: 0px;
+    font-size: 18px;
+    color: #333;
+    font-weight: bolder;
+}
+
+.channel-info-id-div {
+    display: flex;
+    width: 100%;
+    background: white;
+    border-radius: 5px;
+    padding: 3%;
+}
+
+.channel-id-div {
+    width: 50%;
+    display: flex;
+    margin: auto auto auto 5%;
+}
+
+.channel-id {
+    margin: 0px;
+    font-size: 16px;
+    color: #666
+}
+
+.channel-idtext-div {
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+    margin: auto 5% auto auto;
+}
+
+.channel-idtext {
+    margin: 0px;
     font-size: 18px;
     color: #333;
     font-weight: bolder;
 }
 
 .channel-info-type-div {
-	display: flex;
+    display: flex;
     width: 100%;
     background: white;
     border-radius: 5px;
@@ -144,33 +178,33 @@
 }
 
 .channel-type-div {
-	width: 50%;
+    width: 50%;
     display: flex;
     margin: auto auto auto 5%;
 }
 
 .channel-type {
-	margin: 0px;
+    margin: 0px;
     font-size: 16px;
     color: #666
 }
 
 .channel-typetext-div {
-	width: 50%;
+    width: 50%;
     display: flex;
     justify-content: flex-end;
     margin: auto 5% auto auto;
 }
 
 .channel-typetext {
-	margin: 0px;
+    margin: 0px;
     font-size: 18px;
     color: #333;
     font-weight: bolder;
 }
 
 .channel-info-location-div {
-	display: flex;
+    display: flex;
     width: 100%;
     background: white;
     border-radius: 5px;
@@ -179,26 +213,26 @@
 }
 
 .channel-location-div {
-	width: 50%;
+    width: 50%;
     display: flex;
     margin: auto auto auto 5%;
 }
 
 .channel-location {
-	margin: 0px;
+    margin: 0px;
     font-size: 16px;
     color: #666
 }
 
 .channel-locationtext-div {
-	width: 50%;
+    width: 50%;
     display: flex;
     justify-content: flex-end;
     margin: auto 5% auto auto;
 }
 
 .channel-locationtext {
-	margin: 0px;
+    margin: 0px;
     color: #333;
     font-size: 18px;
     font-weight: bolder;
@@ -234,28 +268,3 @@
     text-align: justify;
     padding: 2%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
