--- a/src/app/page/manage-channel-send-page/manage-channel-send-page.page.html
+++ b/src/app/page/manage-channel-send-page/manage-channel-send-page.page.html
@@ -1,7 +1,7 @@
 <ion-header class="header">
 	<div class="header-div">
 		<div class="header-sub-div1">
-			<button class="header-back-button" routerLink="/managechannel" type="button"><i class="fas fa-chevron-left"></i></button>
+			<button class="header-back-button" routerLink="/manageChannel" type="button"><i class="fas fa-chevron-left"></i></button>
 		</div>
 		<div class="header-sub-div2">
 			<img class="header-title-image" src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
@@ -33,14 +33,59 @@
 			</div>
 		</div>
 	</div>
-
-	<div>
-		<div>
-			<div>
-				<textarea></textarea>
+	
+	<div id="popupdiv" class="popup_div">
+		<div class="validity_add_popup">
+			<div class="validity_text_div">
+				<p class="add_validity_text">Add Validity</p>
 			</div>
-			<div>
-				
+			<div class="validity_close_div">
+				<button class="validity_closebtn" (click)="closepopup()" type="button"><i class="fas fa-times"></i></button>
+			</div>
+		</div>
+		<div class="time_date_div">
+			<ion-item>
+			      <ion-label>Start Day</ion-label>
+			      <ion-datetime displayFormat="MM/DD/YYYY" min="2020-01-01" max="2020-12-31"></ion-datetime>
+		    </ion-item>
+			<ion-item>
+			      <ion-label>Start Time</ion-label>
+			      <ion-datetime displayFormat="h:mm a"></ion-datetime>
+		    </ion-item>
+		    <ion-item>
+			      <ion-label>End Day</ion-label>
+			      <ion-datetime displayFormat="MM/DD/YYYY" min="2020-01-01" max="2020-12-31"></ion-datetime>
+		    </ion-item>
+			<ion-item>
+			      <ion-label>End Time</ion-label>
+			      <ion-datetime displayFormat="h:mm a"></ion-datetime>
+		    </ion-item>
+		</div>
+		<div class="popup_save_div">
+			<button class="popup_save_btn" (click)="savetimedate()" type="button">Save</button>
+		</div>
+	</div>
+
+	<div class="footer_div">
+		<div class="footer_txtarea_div">
+			<div class="textarea_div">
+				<textarea class="textarea"></textarea>
+			</div>
+			<div class="footer_btn_div">
+				<div class="attach_div">
+					<button class="attach_btn" type="button"><i class="fas fa-paperclip"></i></button>
+				</div>
+				<div class="send_div">
+					<button class="send_btn" type="button"><i class="fas fa-paper-plane"></i></button>
+				</div>
+			</div>
+		</div>
+		<div class="footer_addtime_div">
+			<div class="addtime_div">
+				<button class="add_btn" (click)="popupvalidity()" type="button">Message Validity Setup</button>
+			</div>
+			<div class="validity_div">
+				<p class="validity_text">Validity: 2 Days</p>
 			</div>
 		</div>
 	</div>
