--- a/src/app/page/manage-channel-send-page/manage-channel-send-page.page.scss
+++ b/src/app/page/manage-channel-send-page/manage-channel-send-page.page.scss
@@ -113,38 +113,157 @@
     font-size: 12px;
 }
 
+.footer_div {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    box-shadow: 0 0 5px;
+    height: 150px;
+}
 
+.footer_txtarea_div {
+    width: 95%;
+    display: flex;
+    margin: auto;
+    height: 90px;
+}
 
+.textarea_div {
+    width: 85%
+}
 
+.textarea {
+    width: 100%;
+    height: 100%;
+    background: #333;
+    color: white;
+    border-radius: 5px;
+    resize: none;
+}
 
+.footer_btn_div {
+    width: 15%;
+    height: 100%;
+}
 
+.attach_div {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: flex-end;
+    vertical-align: top;
+}
 
+.attach_btn {
+    padding: 0px;
+    font-size: 25px;
+    background: transparent;
+    color: #1e7e34;
+}
 
+.send_div {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: flex-end;
+    vertical-align: bottom;
+}
 
+.send_btn {
+    padding: 0px;
+    font-size: 25px;
+    background: transparent;
+    color: #007bff;
+}
 
+.footer_addtime_div {
+    width: 95%;
+    margin: auto;
+    height: 30px;
+}
 
+.addtime_div {
+    display: flex;
+    justify-content: center;
+    height: 100%;
+}
 
+.add_btn {
+    background: #28a745;
+    width: 60%;
+    height: 25px;
+    border-radius: 5px;
+    margin: auto;
+}
 
+.validity_div {
+    display: flex;
+    justify-content: center;
+    height: 100%;
+}
 
+.validity_text {
+    margin: auto
+}
 
+.popup_div {
+    width: 90%;
+    margin: 25% auto;
+    display: none;
+    box-shadow: 0 0 4px;
+    border-radius: 5px;
+    position: fixed;
+    top: 5%;
+    background: white;
+    left: 5%;
+}
 
+.validity_add_popup {
+    width: 100%;
+    display: flex;
+    height: 50px;
+}
 
+.validity_text_div {
+    width: 85%;
+    display: flex;
+}
 
+.add_validity_text {
+    margin: auto auto auto 5%;
+    font-size: 20px;
+    font-weight: bolder;
+}
 
+.validity_close_div {
+    width: 15%;
+    display: flex;
+}
 
+.validity_closebtn {
+    padding: 0px;
+    margin: auto;
+    font-size: 24px;
+    background: transparent;
+    color: #dc3545;
+}
 
+.time_date_div {
+    width: 90%;
+    margin: auto;
+}
 
+.popup_save_div {
+    display: flex;
+    width: 100%;
+    height: 50px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+.popup_save_btn {
+    margin: auto;
+    background: #28a745;
+    padding: 0;
+    width: 25%;
+    height: 30px;
+    border-radius: 5px;
+}
